<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/contrail_one"
            android:paddingStart="10sp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <CalendarView
            android:id="@+id/calendarView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        </CalendarView>
        <TextView
            android:id="@+id/dayname"
            android:layout_marginLeft="24sp"
            android:layout_marginRight="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/Date"
            android:textSize="20sp"
            />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_gravity="center">

        </ImageView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp">
        <TextView
            android:id="@+id/text"
            android:layout_marginStart="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insert_details"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:gravity="start"
            />
        <EditText
            android:id="@+id/editSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:hint="@string/entersub"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:autofillHints="@string/entersub"
            android:inputType="text" />
        <EditText
            android:id="@+id/editTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editSub"
            android:hint="@string/entertask"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:autofillHints="@string/entertask"
            tools:ignore="TextFields" />
        <EditText
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTodo"
            android:hint="@string/enterendate"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:autofillHints="@string/enterendate"
            android:inputType="text"
            tools:ignore="TextFields" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editDate"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/addbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_below="@id/editDate"
                android:layout_weight="2"
                android:layout_marginRight="10sp"
                />

            <Button
                android:id="@+id/viewbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/addbtn"
                android:text="@string/show"
                android:layout_weight="2"
                android:layout_marginLeft="10sp"
                />

        </LinearLayout>



    </RelativeLayout>



</LinearLayout>